<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/qc_qun"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/ok"
            android:textColor="@color/comm_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/search" />

        <EditText
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dip"
            android:background="@color/white"
            android:hint="@string/search_friend"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/comm_color"/>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:text="@string/qc_choosequn"
	    android:background="@color/white"
	    android:gravity="center_vertical"
	    android:paddingLeft="10dp"
	    android:textSize="16sp"/>
	<View 
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/comm_color"/>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="20dp"
	    android:text="@string/mesg"
	    android:background="@color/bg_color"
	    android:gravity="center_vertical"
	    android:paddingLeft="10dp"
	    android:textSize="16sp"/>
    <ListView
        android:id="@+id/searchList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        android:divider="@color/comm_color"
        android:dividerHeight="1dp"
        android:fadingEdge="none" />

</LinearLayout>