<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/top_color" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:onClick="regBackClick"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/regdit"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:onClick="regNext"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#a3a3a3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/regtit1"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/ssq"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/preference_single_item"
        android:clickable="true"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/schoolAndCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/xxjxy"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10sp"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu_normaler" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/year"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:layout_marginTop="14dp"
        android:background="@drawable/preference_single_item"
        android:clickable="true"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/choseTime"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10sp"
            android:scaleType="matrix"
            android:src="@drawable/mm_submenu_normaler" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/areaNum"
            android:layout_width="80dp"
            android:layout_height="45sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_editbox"
            android:singleLine="true"
            android:text="+86"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="fill_parent"
            android:layout_height="45sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/areaNum"
            android:background="@drawable/login_editbox"
            android:hint="@string/phoneNum"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>