<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/top_color" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="#a3a3a3" />

        <Button
            android:id="@+id/pre"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:onClick="regPreClick"
            android:text="@string/pre"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wxzl"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/regdit"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:onClick="regditSub"
            android:text="@string/regdit"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/jbzxtit"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp" >

                <EditText
                    android:id="@+id/nc"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/login_editbox"
                    android:hint="@string/plsnc"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/tx"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/head"
                    android:scaleType="centerCrop" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/passWord"
                    android:layout_width="fill_parent"
                    android:layout_height="45sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_editbox"
                    android:hint="@string/plspass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/valPassWord"
                    android:layout_width="fill_parent"
                    android:layout_height="45sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_editbox"
                    android:hint="@string/plsValpass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/sexChose"
                android:layout_width="fill_parent"
                android:layout_height="45sp"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="sexChose" >

                <TextView
                    android:id="@+id/sexValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/plssex"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10sp"
                    android:scaleType="matrix"
                    android:src="@drawable/mm_submenu_normaler" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>