<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/loginTopLayout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/top_color" >

        <Button
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:onClick="loginBackClick"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="#a3a3a3" />
    </RelativeLayout>

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:layout_below="@+id/loginTopLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/plsnum"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:layout_below="@+id/userName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/plspass"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/passWord"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_style_green"
        android:enabled="false"
        android:onClick="loginClick"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/forgetPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/link"
            android:onClick="forgetPasswdClick"
            android:text="@string/findpass"
            android:textColor="#7D9EC0"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>