<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/bg_color" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/qc_add"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="#a3a3a3" />
    </RelativeLayout>

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_preference_single_normal"
        android:gravity="center"
        android:hint="@string/plsnum"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/searchList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        android:divider="@color/comm_color"
        android:dividerHeight="1dp"
        android:fadingEdge="none" />

</LinearLayout>