<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yale="http://schemas.android.com/apk/res/com.yale.qcxxandroid"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <com.yale.qcxxandroid.base.MoveTab
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/mm_listitem"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <Button
                    style="@style/MMTabButton"
                    android:drawableTop="@drawable/img_qingchuner"
                    android:tag="main_button0"
                    android:text="@string/qc" />

                <Button
                    style="@style/MMTabButton"
                    android:drawableTop="@drawable/img_xiuxiuer"
                    android:tag="main_button1"
                    android:text="@string/xx" />

                <Button
                    style="@style/MMTabButton"
                    android:drawableTop="@drawable/img_banjier"
                    android:tag="main_button2"
                    android:text="@string/bj" />

                <Button
                    style="@style/MMTabButton"
                    android:drawableTop="@drawable/img_wodeer"
                    android:tag="main_button3"
                    android:text="@string/my" />
            </com.yale.qcxxandroid.base.MoveTab>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#a3a3a3" />

            <TextView
                android:id="@+id/main_tab_new_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginRight="13.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/tips"
                android:gravity="center"
                android:textColor="#ffffffff"
                android:textSize="10.0sp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</TabHost>